--- a/neuralnetwork2.ipynb
+++ b/neuralnetwork2.ipynb
@@ -143,7 +143,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter weights' details of layers 1 2\n"
+      "\n",
+      "enter weights' details of layers 1 2"
      ]
     },
     {
