--- a/neuralnetwork2.ipynb
+++ b/neuralnetwork2.ipynb
@@ -144,7 +144,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "enter weights' details of layers 1 2"
+      "enter weights' details of layers 1 2\n"
      ]
     },
     {
