--- a/neuralnetwork2.ipynb
+++ b/neuralnetwork2.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "    def Weights(self):\n",
     "        for i in range(0, self.hidden_layers + 1):\n",
-    "            print(\"enter weights' details of layers\", i + 1, i + 2)\n",
+    "            print(\"\nenter weights' details of layers\", i + 1, i + 2)\n",
     "            lin, lout = input(\"enter no of inputs and outputs:\").split()\n",
     "            self.w.append(WeightsInitialization(int(lin), int(lout)))\n",
     "\n",
