--- a/neuralnetwork2.ipynb
+++ b/neuralnetwork2.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "    def Weights(self):\n",
     "        for i in range(0, self.hidden_layers + 1):\n",
-    "            print(\"\nenter weights' details of layers\", i + 1, i + 2)\n",
+    "            print(\"enter weights' details of layers\", i + 1, i + 2)\n",
     "            lin, lout = input(\"enter no of inputs and outputs:\").split()\n",
     "            self.w.append(WeightsInitialization(int(lin), int(lout)))\n",
     "\n",
@@ -145,7 +145,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
+     "text": ["\n",
       "enter weights' details of layers 1 2\n"
      ]
     },
@@ -159,7 +159,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
+     "text": ["\n",
       "enter weights' details of layers 2 3\n"
      ]
     },
