--- a/vectorised_nn.ipynb
+++ b/vectorised_nn.ipynb
@@ -171,7 +171,7 @@
     "        return cost\n",
     "    \n",
     "    \n",
-    "    def l_curves(self,l_rate):\n",
+    "    def l_curves(self):\n",
     "        sns.set()\n",
     "        plt.figure(dpi=100,figsize=(6,4))\n",
     "        iters = [i * self.read_freq for i in range(self.plot_iters1)]\n",
@@ -299,7 +299,7 @@
     "\n",
     "print(\"\\ntime taken to train : %0.2f\"%(et-st),\"s\\n\")\n",
     "\n",
-    "nn.l_curves(l_rate=learning_rate)\n",
+    "nn.l_curves()\n",
     "    \n",
     "print(\"\\n\\ntraining accuracy: %0.3f\" % nn.accuracy(X_train, np.argmax(y_train,axis=1)), \"%\")\n",
     "\n",
